fix tracks on firefox and edge

--- a/static/sass/components/_palette.scss
+++ b/static/sass/components/_palette.scss
@@ -47,5 +47,5 @@ $sponsor-text: $b-brown;
 $sponsor-background: white;
 
 //footer
-$footer-text: $b-brown;
-$footer-background: $b-tan;
+$footer-text: white;
+$footer-background: $b-brown;
